--- a/orbis_challenge/public/index.html
+++ b/orbis_challenge/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,6 +28,7 @@
     <title>Orbis Challenge</title>
   </head>
   <body>
+    <script src="https://kit.fontawesome.com/f4d7e0070e.js" crossorigin="anonymous"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
